--- a/MoviesWebShop/Views/Movies/Index.cshtml
+++ b/MoviesWebShop/Views/Movies/Index.cshtml
@@ -22,7 +22,7 @@
             <td> @Movie[0]</td>
             <td> @Movie[1]</td>
             <td> @Movie[2]</td>
-            <td> @Movie[3]</td>
+            <td> @Movie[3] kr</td>
         </tr>
         }
 
