--- a/MoviesWebShop/Views/Movies/Create.cshtml
+++ b/MoviesWebShop/Views/Movies/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model CreateMovieViewModel  
+@{
     ViewData["Title"] = "Movies - Add new Movie";
 }
 <h1> Add New Movie</h1>
@@ -10,23 +11,24 @@
 }
 
 <form asp-action="create" method="post">
-    <label for="movieName"> Movie Name</label>
-    <input type="text" name="movieName" id="movieName" value=" @ViewBag.MovieName"  />
+    <label asp-for=" MovieName "> </label>
+    <input asp-for="MovieName "  />
 
-    <label for="genre"> Genre</label>
-    <input type="text" name="genre" id="genre"  list="genresList" value=" @ViewBag.Genre"  />
+    <label asp-for="Genre"> </label>
+    <input asp-for="Genre "  list="genresList" 
+           />
 
-    <label for="iMDB"> IMDB</label>
-    <input type="number" name="iMDB" id="iMDB" min="0" step="1" value=" @ViewBag.IMDB" />
+    <label asp-for="IMDB"> </label>
+    <input asp-for="IMDB " />
 
-    <label for="price"> Price</label>
-    <input type="number" name="price" id="price" min="0" step="10" value=" @ViewBag.Price  "  /><span>kr</span>
+    <label asp-for="Price "></label>
+    <input asp-for="Price " min="0" step="10" /><span>kr</span>
 
     <button type="submit"> Create Movie</button>
 
 
     <datalist id="genresList">
-        @foreach (string genre in ViewBag.Genres)
+        @foreach (string genre in Model.GenreList )
         {
             <option value="@genre ">@genre </option>
 
