--- a/MoviesWebShop/Views/_ViewImports.cshtml
+++ b/MoviesWebShop/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MoviesWebShop
 @using MoviesWebShop.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using MoviesWebShop.Models.Movies
