--- a/MoviesWebShop/Views/Movies/Create.cshtml
+++ b/MoviesWebShop/Views/Movies/Create.cshtml
@@ -12,23 +12,29 @@
 
 <form asp-action="create" method="post">
     <label asp-for=" MovieName "> </label>
-    <input asp-for="MovieName "  />
+    <input asp-for="MovieName " />
+    <span asp-validation-for=" MovieName "></span>
+
 
     <label asp-for="Genre"> </label>
-    <input asp-for="Genre "  list="genresList" 
-           />
+    <input asp-for="Genre " list="genresList" />
+    <span asp-validation-for=" Genre "></span>
 
     <label asp-for="IMDB"> </label>
     <input asp-for="IMDB " />
+    <span asp-validation-for=" IMDB "></span>
+
 
     <label asp-for="Price "></label>
     <input asp-for="Price " min="0" step="10" /><span>kr</span>
+    <span asp-validation-for=" Price "></span>
+
 
     <button type="submit"> Create Movie</button>
 
 
     <datalist id="genresList">
-        @foreach (string genre in Model.GenreList )
+        @foreach (string genre in Model.GenreList)
         {
             <option value="@genre ">@genre </option>
 
