--- a/MoviesWebShop/Views/Movies/Index.cshtml
+++ b/MoviesWebShop/Views/Movies/Index.cshtml
@@ -19,12 +19,7 @@
     <tbody>
         @foreach (Movie movie in Model )
         {
-        <tr>
-            <td> @movie.MovieName   </td>
-            <td> @movie.Genre   </td>
-            <td> @movie.IMDB  </td>
-            <td> @movie.Price kr   </td>
-        </tr>
+        <partial name="../Shared/_MovieDetails.cshtml" model="movie" />
         }
 
     </tbody>
