--- a/MoviesWebShop/Views/Movies/Create.cshtml
+++ b/MoviesWebShop/Views/Movies/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CreateMovieViewModel  
+﻿@model MoviesWebShop.Models.ViewModels.CreateMovieViewModel  
 @{
     ViewData["Title"] = "Movies - Add new Movie";
 }
