--- a/MoviesWebShop/Views/_ViewImports.cshtml
+++ b/MoviesWebShop/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MoviesWebShop
 @using MoviesWebShop.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using MoviesWebShop.Models.Movies
+@using MoviesWebShop.Models.Services
+@using MoviesWebShop.Models.ViewModels
