--- a/MoviesWebShop/Views/Shared/_Layout.cshtml
+++ b/MoviesWebShop/Views/Shared/_Layout.cshtml
@@ -20,6 +20,10 @@
                     <a asp-controller="Movies" asp-action="Index">Movies</a>
                 </li>
 
+                <li>
+                    <a asp-controller="Movies" asp-action="Ajax">Ajax</a>
+                </li>
+
             </ul>
         </nav>
     </header>
