--- a/MoviesWebShop/Views/Shared/_Layout.cshtml
+++ b/MoviesWebShop/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 </li>
 
                 <li>
-                    <a asp-controller="Movies" asp-action="Ajax">Ajax</a>
+                    <a  asp-area="" asp-controller="AjaxMovies" asp-action="Index">Ajax</a>
                 </li>
 
             </ul>
